added pretask to install python, added basic ansible.cfg file

--- a/ssh.yml
+++ b/ssh.yml
@@ -1,9 +1,12 @@
 ---
 
   - hosts: instances
-    gather_facts: False
-    remote_user: ubuntu
     become: true
-    become_user: root
+    gather_facts: no
+    pre_tasks:
+    - name: Install python for Ansible
+      raw: test -e /usr/bin/python || (apt -y update && apt install -y python-minimal)
+      changed_when: False
+    - setup:
     roles:
       - ssh-access
