--- a/roles/ssh-access/tasks/grant.yml
+++ b/roles/ssh-access/tasks/grant.yml
@@ -12,6 +12,6 @@
   authorized_key:
     user: "{{ user_name }}"
     state: present
-    key: "{{ lookup('file', '../../../sshkeys/{{ user_name }}/id_rsa.pub') }}"
+    key: "{{ lookup('file', '../files/pubkeys/{{ user_name }}/id_rsa.pub') }}"
   tags:
     - grant
