--- a/roles/ssh-access/tasks/revoke.yml
+++ b/roles/ssh-access/tasks/revoke.yml
@@ -4,7 +4,7 @@
   authorized_key:
     user: "{{ user_name }}"
     state: absent
-    key: "{{ lookup('file', '../../../sshkeys/{{ user_name }}/id_rsa.pub') }}"
+    key: "{{ lookup('file', '../files/pubkeys/{{ user_name }}/id_rsa.pub') }}"
   tags:
     - revoke
 
